Styling & CSS for all components

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,7 +9,8 @@
 
 .App-header {
   /* background-color: #282c34; */
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIeTA9ASiHPgM1tzbqihDbV5ozJ9PffYFNAA&usqp=CAU");
+  background-image: url("https://wallpaperaccess.com/full/1302149.jpg");
+  /* background-image: url("https://c4.wallpaperflare.com/wallpaper/382/231/775/yosemite-valley-el-capitan-united-states-california-wallpaper-preview.jpg"); */
   background-size: cover;
   min-height: 100vh;
   display: flex;
