Added Get Started button to home page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,3 +51,8 @@ button {
 	background-clip: text;
 	-webkit-text-fill-color: transparent; */
 }
+
+.app-descr {
+  border: solid;
+  background: #708090;
+}
