--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -53,6 +53,9 @@ button {
 }
 
 .app-descr {
-  border: solid;
-  background: #708090;
+  text-align: center;
+  border-style: solid;
+  background: #556B2F;
+  width: 650px;
+  padding: 15px;
 }
