--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -55,22 +55,22 @@ button {
 .app-descr {
   text-align: center;
   border-style: solid;
-  background: #556B2F;
-  width: 650px;
+  border-radius: 25px;
+  background: rgba(0, 0, 0, 0.6);
+  /* width: 650px; */
   padding: 15px;
 }
 
 .AllParksListDiv {
-  background: linear-gradient(#B42033, #FEFEFE, #3C3B6E);
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
-  border-color: #3C3B6E;
   text-align: center;
+  border-radius: 25px;
+  border-color: #3C3B6E;
   border-style: solid;
-  width: 475px;
-  /* padding: 5px; */
+  /* width: 475px; */
+  padding: 15px;
 }
 
 .AllParksListDivTopLevel {
   background: rgba(0, 0, 0, 0.4);
+  border-radius: 25px;
 }
