--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,16 +75,16 @@ button {
   border-radius: 25px;
 }
 
-.FavoritedParksListDiv {
+.card {
+  /* display: inline-block; */
+  /* width: 500px; */
+  /* height: 400px; */
+  /* margin: 25px; */
   text-align: center;
   border-radius: 25px;
   border-color: #3C3B6E;
   border-style: solid;
-  /* width: 475px; */
   padding: 15px;
-}
-
-.FavoritedParksListDivTopLevel {
   background: rgba(0, 0, 0, 0.4);
   border-radius: 25px;
 }
